[gd_scene load_steps=5 format=3 uid="uid://bifv3ax748aje"]

[ext_resource type="Script" path="res://Main.gd" id="1_5yltj"]

[sub_resource type="Theme" id="Theme_qpawv"]
Button/font_sizes/font_size = 24

[sub_resource type="Theme" id="Theme_53qdb"]
Button/font_sizes/font_size = 21

[sub_resource type="Theme" id="Theme_ra62l"]
Button/font_sizes/font_size = 17

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_5yltj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.356863, 0.356863, 0.356863, 0.756863)

[node name="Select" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.5
offset_right = 86.5
offset_bottom = 42.0
grow_horizontal = 2
theme = SubResource("Theme_qpawv")
text = "Select a folder"

[node name="NativeFileDialog" type="NativeFileDialog" parent="Select"]
title = "Open a Directory"
file_mode = 2
access = 2

[node name="Config" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -21.0
offset_right = 100.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_53qdb")
text = "Open Config Folder"

[node name="Reload" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -121.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_ra62l")
text = "Reload Config"

[node name="Delete" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 119.0
grow_vertical = 0
theme = SubResource("Theme_ra62l")
text = "Delete Config"

[node name="NativeConfirmationDialog" type="NativeConfirmationDialog" parent="Delete"]
title = "Are you sure?"
dialog_text = "Do you want to delete the config file?"
dialog_icon = 1

[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="dir_selected" from="Select/NativeFileDialog" to="." method="_on_dir_selected"]
[connection signal="pressed" from="Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="Delete/NativeConfirmationDialog" to="." method="_on_delete_confirmed"]
